# oshit_kernel

./: .gitignore  Cargo.toml  LICENSE  Makefile  Readme.md  build.rs  make_fs
src/: .gitignore  config.rs  entry.asm  link_app.asm  linker_k210.ld  linker_qemu.ld  main.rs  version.rs
src/drivers/: mod.rs  sdcard.rs  virt.rs
src/fs/: dirent.rs  file.rs  file_with_lock.rs  mod.rs  path.rs  pipe.rs  stdio.rs  virt_file.rs
src/fs/block_cache/: blkcache.rs  mod.rs
src/fs/deprecated/: mod.rs
src/fs/deprecated/block_cache/: blkcache.rs  mod.rs
src/fs/deprecated/fat/: dbr.rs  mbr.rs  mod.rs
src/fs/fat/: dbr.rs  fat.rs  fsinfo.rs  mbr.rs  mod.rs  mod.rs.backup
src/fs/fs_impl/: blkdevice.rs  fat32_wrapper.rs  fs_files.rs  mod.rs  path.rs  utils.rs  vfs.rs
src/fs/fs_impl/cache_mgr/: blkcache.rs  mod.rs
src/fs/fs_impl/devfs/: block_device.rs  char_device.rs  devfs.rs  device_file.rs  mod.rs  zero_device.rs
src/fs/fs_impl/fat32/: chain.rs  dbr.rs  dirent.rs  fat.rs  file.rs  (+3 more)
src/fs/mount_manager/: mod.rs  mount_manager.rs
src/memory/: addresses.rs  frame_alloc.rs  kernel_heap.rs  layout.rs  mod.rs  pagetable.rs  userbuffer.rs
src/panic/: mod.rs  panic_handler.rs
src/process/: default_handlers.rs  error.rs  kernel_stack.rs  manager.rs  mod.rs  pcb.rs  pid.rs  proc0.rs  processor.rs  switch.asm  temp_app_loader.rs
src/sbi/: mod.rs  primitive_io.rs  sbi_funcs.rs  timer.rs
src/syscall/: fs_syscall.rs  mod.rs  process_syscall.rs  trivial_syscall.rs
src/trap/: mod.rs  trap.asm  trap_context.rs  trap_handler.rs
src/utils/: mem_op.rs  mod.rs  range.rs
(+1 files in other folders)
