[package]
name = "oshit_kernel"
version = "0.1.0"
authors = ["willson0v0 <willsonlgz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
min_log_level_verbose = []
min_log_level_info = []
min_log_level_warning = []
min_log_level_error = []
min_log_level_fatal = []
