[package]
name = "oshit_kernel"
version = "0.1.0"
authors = ["willson0v0 <willsonlgz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
spin = "0.7.0"
xmas-elf = "0.7.0"
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

[build-dependencies]
chrono = "0.4"

[features]
min_log_level_verbose = []
min_log_level_debug = []
min_log_level_info = []
min_log_level_warning = []
min_log_level_error = []
min_log_level_fatal = []
board_qemu = []
board_k210 = []